# SigntoolGUI

./: .clang-format  CMakeLists.txt  README.md
.github/ISSUE_TEMPLATE/: feature_request.md  to-do.md
img/: winico.rc
res/: icons.qrc
src/: constants.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qfileslistdraganddrop.cpp  qfileslistdraganddrop.h
